Fix, or try to fix, too-long lines.